<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inboxFragment"
            android:icon="@drawable/ic_inbox"
            android:title="@string/title_inbox"
            tools:checked="true" />
    </group>

    <item android:title="@string/title_labels">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/starredFragment"
                    android:icon="@drawable/ic_star"
                    android:title="@string/title_starred" />

                <item
                    android:id="@+id/snoozedFragment"
                    android:icon="@drawable/ic_clock"
                    android:title="@string/title_snoozed" />
            </group>
        </menu>
    </item>


    <item android:title="@string/title_options">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/settingsFragment"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/title_settings" />
                <item
                    android:id="@+id/helpFragment"
                    android:icon="@drawable/ic_help"
                    android:title="@string/title_help" />
            </group>
        </menu>
    </item>
</menu>
